// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> should add fadeIn and bounceIn classes 1`] = `
.c0 {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  margin-right: 2.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: rgba(0,0,0,0.45);
  z-index: 30;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 600px;
  min-height: 400px;
  pointer-events: auto;
  border-radius: 0.8rem;
  background-color: white;
}

@media (max-width:450px) {
  .c0 {
    -webkit-align-items: flex-end;
    -webkit-box-align: flex-end;
    -ms-flex-align: flex-end;
    align-items: flex-end;
  }
}

@media (max-width:450px) {
  .c1 {
    min-height: 80%;
  }
}

<div
  class="c0 animate__animated animate__fadeIn "
  open=""
  role="modal"
>
  <div
    class="c1 animate__animated animate__bounceInUp "
  />
</div>
`;

exports[`<Modal /> should add fadeOut and bounceOut classes 1`] = `
.c0 {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  margin-right: 2.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: rgba(0,0,0,0.45);
  z-index: 30;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
}

.c1 {
  max-width: 600px;
  min-height: 400px;
  pointer-events: auto;
  border-radius: 0.8rem;
  background-color: white;
}

@media (max-width:450px) {
  .c0 {
    -webkit-align-items: flex-end;
    -webkit-box-align: flex-end;
    -ms-flex-align: flex-end;
    align-items: flex-end;
  }
}

@media (max-width:450px) {
  .c1 {
    min-height: 80%;
  }
}

<div
  class="c0 animate__animated animate__fadeOut "
  role="modal"
>
  <div
    class="c1 animate__animated animate__bounceOutUp "
  />
</div>
`;
